adding bullet instantiation. Next thing to do is to destroy bullet when this has a contact with something

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,6 @@ target_link_libraries(SDLTest SDL2 SDL2_image)
 
 file(GLOB_RECURSE CLIENT_SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/clientServer/*.cpp" "src/clientServer/*.h" "libs/*.h" "libs/*.cpp")
 add_executable( clientServer
-        ${CLIENT_SERVER_SOURCES} src/clientServer/client/Bullet.cpp src/clientServer/client/Bullet.h src/clientServer/server/Bullet.cpp src/clientServer/server/Bullet.h)
+        ${CLIENT_SERVER_SOURCES} src/clientServer/server/Entity.cpp src/clientServer/server/Entity.h)
 
 target_link_libraries(clientServer Box2D SDL2 SDL2_image)
