--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,34 +10,34 @@ message("Agregando Box2D como librería")
 file(GLOB_RECURSE BOX2D_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "libs/Box2D/*.cpp")
 add_library(Box2D STATIC ${BOX2D_SOURCES})
 
-add_executable( client
-        libs/CommunicationSocket.cpp
-        libs/CommunicationSocket.h
-        libs/ErrorMessages.h
-        libs/Exception.cpp
-        libs/Exception.h
-        libs/Socket.cpp
-        libs/Socket.h
-        src/client/ClientSocket.cpp
-        src/client/ClientSocket.h
-        src/client/main.cpp)
-target_link_libraries(client SDL2 SDL2_image)
+message("Cargando fuentes para el cliente")
+file(GLOB CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.cpp" "libs/*.h")
+add_executable( client ${CLIENT_SOURCES})
+target_link_libraries(client SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
-add_executable(	server
-        libs/CommunicationSocket.cpp
-        libs/CommunicationSocket.h
-        libs/ErrorMessages.h
-        libs/Exception.cpp
-        libs/Exception.h
-        libs/Socket.cpp
-        libs/Socket.h
-        src/server/main.cpp
-        src/server/ServerSocket.cpp
-        src/server/ServerSocket.h)
+
+message("Cargando fuentes para el servidor")
+file(GLOB SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/server/*.cpp" "src/server/*.h")
+file(GLOB SERVER_LIBS_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
+		"libs/Chronometer.*" 
+		"libs/CommunicationSocket.*"
+		"libs/DoubleBuffer.h"
+		"libs/ErrorMessages.h"
+		"libs/Exception.*"
+		"libs/GameStateMsg.h"
+		"libs/Point.h"
+		"libs/Socket.*"
+		"libs/Stage.*"
+		"libs/Stream.h"
+		"libs/utils.h")
+add_executable(	server ${SERVER_SOURCES} ${SERVER_LIBS_SOURCES})
 target_link_libraries(server Box2D)
 
-file(GLOB_RECURSE CLIENT_SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/clientServer/*.cpp" "src/clientServer/*.h" "libs/*.h" "libs/*.cpp")
-add_executable( clientServer
-        ${CLIENT_SERVER_SOURCES})
+message("Preparando directivas de instalación")
+file(COPY assets DESTINATION ./)
 
-target_link_libraries(clientServer Box2D SDL2 SDL2_image SDL2_ttf)
+#file(GLOB_RECURSE CLIENT_SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/clientServer/*.cpp" "src/clientServer/*.h" "libs/*.h" "libs/*.cpp")
+#add_executable( clientServer
+#        ${CLIENT_SERVER_SOURCES})
+#
+#target_link_libraries(clientServer Box2D SDL2 SDL2_image SDL2_ttf)
