--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,26 +7,32 @@ message("Agregando '${CMAKE_SOURCE_DIR}/libs' como directorio de includes")
 include_directories(${CMAKE_SOURCE_DIR}/libs)
 
 message("Agregando Box2D como librería")
-file(GLOB_RECURSE BOX2D_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "libs/Box2D/*.cpp")
+file(GLOB_RECURSE BOX2D_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "libs/Box2D/*.cpp" "libs/Box2D/*.h")
 add_library(Box2D STATIC ${BOX2D_SOURCES})
 
-file(GLOB_RECURSE CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.h" "libs/*.cpp")
+file(GLOB CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.h" "libs/*.cpp")
 add_executable(client
         ${CLIENT_SOURCES})
 
 target_link_libraries(client SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
 
-file(GLOB_RECURSE SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/server/*.cpp" "src/server/*.h" "libs/*.h" "libs/*.cpp")
+file(GLOB_RECURSE SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/server/*.cpp" "src/server/*.h")
+file(GLOB SERVER_LIBS_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} 
+	"libs/Chronometer.*"
+	"libs/CommunicationSocket.*"
+	"libs/DoubleBuffer.*"
+	"libs/ErrorMessages.*"
+	"libs/Exception.*"
+	"libs/GameStateMsg.*"
+	"libs/Point.*"
+	"libs/Socket.*"
+	"libs/Stage.*"
+	"libs/Stream.*"
+	"libs/utils.*")
 add_executable(server
-        ${SERVER_SOURCES})
+        ${SERVER_SOURCES}
+        ${SERVER_LIBS_SOURCES})
 
-target_link_libraries(server Box2D SDL2 SDL2_image SDL2_ttf SDL2_mixer)
-
-#file(GLOB_RECURSE CLIENT_SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/clientServer/*.cpp" "src/clientServer/*.h" "libs/*.h" "libs/*.cpp")
-#add_executable( clientServer
-#        ${CLIENT_SERVER_SOURCES})
-#
-#target_link_libraries(clientServer Box2D SDL2 SDL2_image SDL2_ttf)
-
+target_link_libraries(server Box2D)
 file(COPY assets DESTINATION ./)
