fix in bullets messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,8 @@ message("Agregando '${CMAKE_SOURCE_DIR}/libs' como directorio de includes")
 include_directories(${CMAKE_SOURCE_DIR}/libs)
 
 file(GLOB CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.h" "libs/*.cpp")
-add_executable(client
-        ${CLIENT_SOURCES})
-target_link_libraries(client SDL2 SDL2_image SDL2_ttf SDL2_mixer)
+add_executable(clients ${CLIENT_SOURCES})
+target_link_libraries(clients SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
 message("Agregando Box2D como librería")
 file(GLOB_RECURSE BOX2D_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "libs/Box2D/*.cpp" "libs/Box2D/*.h")
