Create/Join Game window.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ message("Agregando '${CMAKE_SOURCE_DIR}/libs' como directorio de includes")
 include_directories(${CMAKE_SOURCE_DIR}/libs)
 
 file(GLOB CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.h" "libs/*.cpp")
-add_executable(clients ${CLIENT_SOURCES})
+add_executable(clients ${CLIENT_SOURCES} src/client/Button.cpp src/client/Button.h)
 target_link_libraries(clients SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
 message("Agregando Box2D como librería")
