--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1.0)
 project(4-Worms)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Werror -pedantic -pthread")
@@ -31,27 +31,70 @@ file(GLOB SERVER_LIBS_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
 add_executable(server
         ${SERVER_SOURCES}
         ${SERVER_LIBS_SOURCES})
+target_link_libraries(server Box2D)
 
 message("Cargando fuentes para el editor")
-file(GLOB EDITOR_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
-        "src/editor/Editor/*.cpp"
-        "src/editor/Editor/*.h"
-        "src/editor/Editor/*.ui"
-        "src/editor/Editor/resources.qrc")
 
+# Find the QtWidgets library
+find_package(Qt5Widgets)
+
+message("[INFO] La raiz del proyecto es ${PROJECT_SOURCE_DIR}")
+
+# Agrego ej3/include a la lista de directorios de includes
+include_directories(${PROJECT_SOURCE_DIR}/src/editor/Editor)
+
+# Esta macro toma cada uno los parámetros y ejecuta *uic* sobre ellos
+# La aplicacion uic genera headers con la definición de los widgets
+# a partir de un archivo .ui
+# Los nombres de los headers generados se guardan en la variable pasada
+# como primer parámetro.
+# No, no los genera con la carpeta como prefijo.
+qt5_wrap_ui(UIS_HEADERS
+		src/editor/Editor/mainwindow.ui
+		)
 # Instruct CMake to run moc automatically when needed
 set(CMAKE_AUTOMOC ON)
 # Create code from a list of Qt designer ui files
-set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
-# Find the QtWidgets library
-find_package(Qt5Widgets CONFIG REQUIRED)
+# Agrego la carpeta con los headers autogenerados a los includes
+message("Agregando '${PROJECT_BINARY_DIR}' como directorio de includes")
+include_directories(${PROJECT_BINARY_DIR})
+
+message("Headers generados: ${UIS_HEADERS}")
+
+file(GLOB EDITOR_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
+		        "src/editor/Editor/*.cpp"
+		        "src/editor/Editor/*.h"
+		        "src/editor/Editor/resources.qrc")
+
 
 # Tell CMake to create the helloworld executable
-add_executable(editor ${EDITOR_SOURCES})
+add_executable(editor ${EDITOR_SOURCES} ${UIS_HEADERS})
 # Use the Widgets module from Qt 5
 target_link_libraries(editor Qt5::Widgets)
 
-target_link_libraries(server Box2D)
+## Instruct CMake to run moc automatically when needed
+#set(CMAKE_AUTOMOC ON)
+## Create code from a list of Qt designer ui files
+#set(CMAKE_AUTOUIC ON)
+#set(CMAKE_AUTORCC ON)
+#
+## Find the QtWidgets library
+#find_package(Qt5Widgets CONFIG REQUIRED)
+#
+#file(GLOB EDITOR_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
+#        "src/editor/Editor/*.cpp"
+#        "src/editor/Editor/*.h"
+#        "src/editor/Editor/*.ui"
+#        "src/editor/Editor/resources.qrc")
+#
+#
+## Tell CMake to create the helloworld executable
+#add_executable(editor ${EDITOR_SOURCES})
+## Use the Widgets module from Qt 5
+#target_link_libraries(editor Qt5::Widgets)
+
+
+
 file(COPY assets DESTINATION ./)
