Create/Join Game window working. Selecting lobby to join still in terminal.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ message("Agregando '${CMAKE_SOURCE_DIR}/libs' como directorio de includes")
 include_directories(${CMAKE_SOURCE_DIR}/libs)
 
 file(GLOB CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.h" "libs/*.cpp")
-add_executable(clients ${CLIENT_SOURCES} src/client/Button.cpp src/client/Button.h)
+add_executable(clients ${CLIENT_SOURCES}
+		)
 target_link_libraries(clients SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
 message("Agregando Box2D como librería")
@@ -23,11 +24,14 @@ file(GLOB SERVER_LIBS_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
 	"libs/ErrorMessages.*"
 	"libs/Exception.*"
 	"libs/GameStateMsg.*"
+	"libs/Observer.*"
 	"libs/Point.*"
 	"libs/Protocol.*"
 	"libs/Socket.*"
 	"libs/Stage.*"
 	"libs/Stream.*"
+	"libs/Subject.*"
+	"libs/Thread.*"
 	"libs/utils.*")
 add_executable(server
         ${SERVER_SOURCES}
