--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Werror -pedantic -pth
 message("Agregando '${CMAKE_SOURCE_DIR}/libs' como directorio de includes")
 include_directories(${CMAKE_SOURCE_DIR}/libs)
 
-file(GLOB CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.h" "libs/*.cpp")
+file(GLOB_RECURSE CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/client/*.cpp" "src/client/*.h" "libs/*.h" "libs/*.cpp")
 add_executable(clients ${CLIENT_SOURCES}
 		)
 target_link_libraries(clients SDL2 SDL2_image SDL2_ttf SDL2_mixer)
