--- a/defaultWeapons.yaml
+++ b/defaultWeapons.yaml
@@ -1,20 +1,11 @@
-- name: "aerialAttack" 
-  quantity: 2
-- name: "banana"
-  quantity: 5
-- name: "baseballBat" 
-  infinity: true
-- name: "bazooka"
-  infinity: true
-- name: "cluster" 
-  quantity: 10
-- name: "dynamite"
-  quantity: 5
-- name: "grenade"
-  infinity: true
-- name: "holy"
-  quantity: 2
-- name: "mortar"
-  quantity: 10
-- name: "teleport"
-  infinity: true
+weaponsAmmo:
+  aerialAttack: 1
+  banana: 5
+  baseballBat: 1
+  bazooka: 999
+  cluster: 5
+  dynamite: 2
+  grenade: 999
+  holy: 2
+  mortar: 5
+  teleport: 2
