--- a/res/test2.yml
+++ b/res/test2.yml
@@ -13,56 +13,93 @@ width: 250
 height: 250
 wormsHealth: 100
 worms:
-  - position: [8.769230769230774, 119.4615384615385]
-  - position: [-38.61538461538461, 120.0769230769231]
-  - position: [-53.15384615384616, 147.2307692307692]
-  - position: [18, 146.7692307692308]
-longGirders:
-  - position: [-8.538461538461533, 131.3076923076923]
-    angle: 18
-  - position: [7.769230769230774, 117.6153846153846]
-    angle: -0
-  - position: [-38.30769230769231, 117.9230769230769]
-    angle: -0
-shortGirders:
-  - position: [-45.38461538461539, 134.3076923076923]
-    angle: -45
-  - position: [-39.38461538461539, 129.6153846153846]
-    angle: -27
-  - position: [-41.46153846153847, 131]
-    angle: -36
-  - position: [3.615384615384613, 136]
-    angle: -0
-  - position: [-48.38461538461539, 138.6153846153846]
-    angle: -63
-  - position: [-1.384615384615387, 132.9230769230769]
-    angle: -0
-  - position: [-0.7692307692307736, 120]
-    angle: -0
-  - position: [-22.07692307692308, 122.6153846153846]
-    angle: -0
-  - position: [-6.92307692307692, 122.4615384615385]
-    angle: -0
-  - position: [18.23076923076923, 144.8461538461538]
-    angle: -0
-  - position: [-53, 145.3846153846154]
-    angle: -0
-  - position: [-36.69230769230769, 128.5384615384615]
-    angle: -18
-  - position: [8.538461538461547, 138.8461538461538]
-    angle: -0
-  - position: [-32.15384615384616, 128.2307692307692]
-    angle: -0
-  - position: [-28.61538461538461, 120.2307692307692]
-    angle: -0
-  - position: [-14.53846153846153, 124.7692307692308]
-    angle: -0
-  - position: [13.46153846153845, 142.2307692307692]
-    angle: -0
-  - position: [-34.69230769230769, 128.3846153846154]
-    angle: -9
-  - position: [-50.15384615384616, 143.1538461538462]
+  - position: [59.46533769230774, 140.48532]
+  - position: [-41.3153846153846, 141.7769230769231]
+girders:
+  - position: [-35.69230769230769, 125]
     angle: -72
+    length: 10.769
+  - position: [-32.38461538461539, 115.6923076923077]
+    angle: -63
+    length: 10.769
+  - position: [48.12307692307692, 126.0215384615385]
+    angle: 36
+    length: 5.3845
+  - position: [-15.69230769230769, 94.07692307692307]
+    angle: -36
+    length: 10.769
+  - position: [0.1538461538461604, 81.69230769230768]
+    angle: -54
+    length: 10.769
+  - position: [44.02769230769232, 145.8469230769231]
+    angle: -90
+    length: 10.769
+  - position: [45.23769230769233, 119.0407692307692]
+    angle: 63
+    length: 5.3845
+  - position: [-11.15384615384616, 91.61538461538461]
+    angle: -27
+    length: 10.769
+  - position: [-22.23076923076923, 99.61538461538461]
+    angle: -45
+    length: 10.769
+  - position: [59.21756692307696, 138.6270392307692]
+    angle: -0
+    length: 5.3845
+  - position: [22.34076923076921, 61.42615384615385]
+    angle: 27
+    length: 5.3845
+  - position: [29.97307692307692, 67.84846153846155]
+    angle: 45
+    length: 5.3845
+  - position: [14.38461538461539, 60.15384615384616]
+    angle: -0
+    length: 10.769
+  - position: [56.5, 136.5392307692308]
+    angle: 72
+    length: 5.3845
+  - position: [51.75307692307692, 129.0930769230769]
+    angle: 45
+    length: 5.3845
+  - position: [55.38307692307691, 134.0261538461539]
+    angle: 63
+    length: 5.3845
+  - position: [26.34307692307692, 64.21846153846155]
+    angle: 45
+    length: 5.3845
+  - position: [-44.15384615384616, 139.5384615384615]
+    angle: -0
+    length: 10.769
+  - position: [42.25923076923075, 107.7784615384616]
+    angle: 63
+    length: 5.3845
+  - position: [5.076923076923066, 70.30769230769232]
+    angle: -54
+    length: 10.769
+  - position: [-28.07692307692308, 107.6153846153846]
+    angle: -54
+    length: 10.769
+  - position: [-25.31461538461539, 145.2884615384615]
+    angle: -90
+    length: 10.769
+  - position: [32.67230769230767, 71.66461538461539]
+    angle: 63
+    length: 5.3845
+  - position: [-37.84615384615384, 134.3076923076923]
+    angle: -81
+    length: 10.769
+  - position: [-8.07692307692308, 90.69230769230768]
+    angle: -18
+    length: 10.769
+  - position: [36.0230769230769, 83.11307692307693]
+    angle: 63
+    length: 5.3845
+  - position: [38.90846153846152, 96.05076923076925]
+    angle: 63
+    length: 5.3845
+  - position: [53.89384615384614, 131.6061538461539]
+    angle: 54
+    length: 5.3845
 background:
   closeBackgroundFile: ""
   midBackgroundFile: ""
