--- a/res/level1/test.yml
+++ b/res/level1/test.yml
@@ -1,7 +1,7 @@
 name: "level 1"
 width: 250
 height: 250
-players: 3
+players: 2
 wormsHealth: 100
 worms:
   - position: [-87.61538461538461, 122]
@@ -55,7 +55,7 @@ longGirders:
 shortGirders:
   []
 background:
-  closeBackgroundFile: ""
-  midBackgroundFile: ""
-  fartherBackgroundFile: ""
+  closeBackgroundFile: "/home/rodrigo/Guerra-de-pijas/assets/img/background/bg1.png"
+  midBackgroundFile: "/home/rodrigo/Guerra-de-pijas/assets/img/background/bg2.png"
+  fartherBackgroundFile: "/home/rodrigo/Guerra-de-pijas/assets/img/background/bg3.png"
   color: [255, 255, 255]
