changing paths and adding files in the install directive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,3 +80,5 @@ file(COPY res DESTINATION ./)
 message("[INFO] Adding Installation directives")
 INSTALL(TARGETS worms_client worms_server worms_editor DESTINATION /usr/bin)
 INSTALL(DIRECTORY assets DESTINATION /var/Worms)
+INSTALL(DIRECTORY res DESTINATION /var/Worms)
+INSTALL(FILES defaultWeapons.yaml serverConfig.yaml DESTINATION /etc/Worms)
